--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.50.0",
     "@tailwindcss/vite": "^4.1.10",
-    "tailwindcss": "^4.1.10",
-    "vue": "^3.5.13"
+    "lucide-vue-next": "^0.522.0",
+    "sweetalert2": "^11.22.0",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^4.1.10",
     "vite": "^6.3.5"
   }
 }
