--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
     "autoprefixer": "^10.4.19",
+    "dotenv": "^17.0.1",
     "postcss": "^8.4.38",
     "tailwindcss": "^4.1.10",
     "vite": "^6.3.5"
